# aeq

./: LICENSE  aeq.cabal
Data/: AEq.hs
Numeric/: IEEE.hs
tests/: Tests.hs
